--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-
+   font-family: 'Poppins', sans-serif;
 }
 
 /* Typography */
@@ -54,4 +54,150 @@ textarea {
 .ba-container{
 	padding-left: 20px;
 	padding-right: 20px;
+    max-width: 1170px;
+    margin: 0 auto;
 }
+
+header {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 30px;
+}
+
+.ba-header .ba-container {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+    -webkit-align-items: center;
+            align-items: center;
+    
+}
+
+.logo {
+    margin: 0;
+}
+
+.logo__link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 33px;
+}
+
+.menu {
+    display: flex;
+    list-style: none;
+}
+
+.menu__item + .menu__item {
+    margin-left: 30px;
+}
+
+.menu__item {
+    overflow: hidden;
+}
+
+.menu__link {
+    position: relative;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+    
+}
+
+.menu__link:after {
+    content: '_';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-100%);
+    width: 100%;
+    height: 1px;
+    background-color: #e71cb4;
+    display: inline-block;
+    transition: left .2s, height .5s, transform 0.75s;
+    transition-timing-function: cubic-bezier(0.42, 0, 0, 1.12);
+}
+
+.menu__link:hover,
+.menu__link:focus {
+    color: #e71cb4;
+}
+
+.menu__link:hover:after,
+.menu__link:focus:after {
+    transform: translate(0);
+    height: 3px;
+}
+
+
+.ba-hero {
+    background-image: url(../img/head.jpg);
+    background-color: #000;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: center;
+            justify-content: center;
+}
+
+.ba-hero__title {
+    font-size: 60px;
+}
+
+.ba-hero__text {
+    font-size: 30px;
+    margin-bottom: 1.8em;
+}
+
+.ba-hero__btn {
+    border: 2px solid rgb(221, 221, 221);
+    border-radius: 18px;
+    height: 54px;
+    
+    font-weight: 500;
+    color: #fff;
+    display: inline-flex;
+    -webkit-align-items: center;
+            align-items: center;
+    text-decoration: none;
+    padding: 0 1.25em;
+}
+
+.ba-hero__btn:hover,
+.ba-hero__btn:focus {
+    background-color: #fff;
+    color: #000;
+}
+
+.arrow {
+    position: relative;
+    font-size: 1rem;
+    padding-left: 74px;
+}
+
+.arrow-number {
+    color: yellow;
+    font-size: 1.5em;
+    margin-right: 35px;
+}
+
+
+.arrow:before,
+.arrow:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 15px;
+    width: 3px;
+    background-color: tomato;
+    
+    display: inline-block;
+}
+
