--- a/css/style.css
+++ b/css/style.css
@@ -155,17 +155,19 @@ header {
     margin-bottom: 1.8em;
 }
 
-.ba-hero__btn {
-    border: 2px solid rgb(221, 221, 221);
-    border-radius: 18px;
-    height: 54px;
-    
-    font-weight: 500;
-    color: #fff;
-    display: inline-flex;
+.ba-btn {
+    text-decoration: none;
     -webkit-align-items: center;
             align-items: center;
-    text-decoration: none;
+    color: #fff;
+    display: inline-flex;
+    font-weight: 500;
+}
+
+.ba-hero__btn {
+    border-radius: 18px;
+    border: 2px solid rgb(221, 221, 221);
+    height: 54px;
     padding: 0 1.25em;
 }
 
@@ -175,29 +177,284 @@ header {
     color: #000;
 }
 
-.arrow {
-    position: relative;
-    font-size: 1rem;
-    padding-left: 74px;
+.about-us {
+    padding-bottom: 60px;
+    color: #444444;
 }
 
-.arrow-number {
-    color: yellow;
-    font-size: 1.5em;
-    margin-right: 35px;
+.about-us__title {
+    font-size: 62px;
+    color: #e71cb4;
+    padding-top: 140px;
 }
 
+.about-us__title + p {
+    font-size: 32px;
+    line-height: 1.5;
+    padding-top: 140px;
+    padding-top: 86px;
+}
 
-.arrow:before,
-.arrow:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 15px;
-    width: 3px;
-    background-color: tomato;
-    
+.arrow__title {
+    font-size: 36px;
+    font-weight: 700;
+    padding-top: 129px;
+}
+
+.list {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+        padding-top: 80px;
+}
+
+.arrow-list {
     display: inline-block;
+
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
 }
 
+span {
+    height: 125px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.arrow, .number {
+    font-size: 44px;
+}
+
+.number {
+    font-weight: bold;
+}
+
+.arrow-text {
+    font-size: 25px;
+    width: 68%;
+}
+
+span + span {
+    padding-left: 40px;
+}
+
+.list .arrow-list:first-of-type .arrow-item:first-of-type .arrow,
+.list .arrow-list:first-of-type .arrow-item:first-of-type .number,
+.list .arrow-list:last-of-type .arrow-item:last-of-type .arrow,
+.list .arrow-list:last-of-type .arrow-item:last-of-type .number {
+    color: #ffde16;
+}
+
+.list .arrow-list:first-of-type .arrow-item:nth-of-type(2) .arrow,
+.list .arrow-list:first-of-type .arrow-item:nth-of-type(2) .number,
+.list .arrow-list:last-of-type .arrow-item:nth-of-type(2) .arrow,
+.list .arrow-list:last-of-type .arrow-item:nth-of-type(2) .number {
+    color: #ff6179;
+}
+
+.list .arrow-list:first-of-type .arrow-item:last-of-type .arrow,
+.list .arrow-list:first-of-type .arrow-item:last-of-type .number {
+    color: #20c9e0;
+}
+
+.list .arrow-list:last-of-type .arrow-item:first-of-type .arrow,
+.list .arrow-list:last-of-type .arrow-item:first-of-type .number {
+    color: #2eac66;
+}
+
+.arrow-item:hover .arrow,
+.arrow-item:hover .number {
+    opacity: 0.5;
+}
+
+div + p {
+    font-size: 22px;
+    line-height: 2;
+}
+
+h4 {
+    font-size: 30px;
+}
+
+h4 + p {
+    font-size: 14px;
+    font-stretch: condensed;
+    padding-bottom: 40px;
+}
+
+.arrow-btn {
+    font-size: 22px;
+    border-radius: 15px;
+    border: 2px solid #c60ebe;
+    background-color: #c60ebe;
+    height: 69px;
+    padding: 0 2.5em;
+}
+
+.arrow-btn:hover,
+.arrow-btn:focus {
+    background-color: #FFF;
+    color: #000;
+    transition: 0.5s ease-in;
+}
+
+
+
+.ba-battle {
+padding: 0;
+margin: 0;
+background-image: -moz-linear-gradient( 90deg, rgb(255,0,204) 0%, rgb(51,51,153) 64%);
+background-image: -webkit-linear-gradient( 90deg, rgb(255,0,204) 0%, rgb(51,51,153) 64%);
+background-image: -ms-linear-gradient( 90deg, rgb(255,0,204) 0%, rgb(51,51,153) 64%);
+color: #fff;
+}
+
+.ba-battle-people {
+    padding-top: 60px;
+}
+
+.ba-battle__title {
+    font-size: 62px;
+    padding-top: 155px;
+    text-align: center;
+}
+
+.ba-battle__title + p {
+    font-size: 22px;
+    line-height: 2;
+    text-align: center;
+}
+
+.people {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+}
+
+.people img {
+    border-radius: 10px;
+}
+
+h6 {
+    font-size: 24px;
+    text-align: center;
+    margin: 0;
+    padding-top: 20px;
+}
+
+h6 + p {
+    font-size: 15px;
+    text-align: center;
+    padding-top: 10px;
+    margin: 0;
+}
+
+.people + .people {
+    padding-top: 30px;
+}
+
+.countdown {
+    padding-top: 110px;
+}
+
+.countdown-title {
+    font-size: 62px;
+    text-align: center;
+    margin: 0;
+}
+
+.timer {
+    display: flex;
+    -webkit-justify-content: space-around;
+            justify-content: space-around;
+    padding-bottom: 120px;
+    padding-top: 60px;
+}
+
+.time {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    height: 160px;
+    width: 160px;
+    background-color: #4c0241;
+    border: 1px solid transparent;
+}
+
+.time:hover {
+    background-color: transparent;
+    border: 1px solid #fff;
+    transition: 0.2s ease-in;
+}
+
+.numeral {
+    display: block;
+    font-size: 72px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.indicator {
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.sponsor {
+    padding-top: 27px;
+    padding-bottom: 150px;
+}
+
+.sponsor-title {
+    font-size: 62px;
+    text-align: center;
+    padding-bottom: 25px;
+    color: #444444;
+}
+
+.sponsor-list {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+}
+
+.sponsor-img {
+    opacity: 0.3;
+    height: 50px;
+}
+
+.sponsor-img:hover {
+    opacity: 1;
+}
+
+.jury {
+    padding-top: 100px;
+    background-color: #ffe9eb;
+    color: #444444;
+}
+
+.jury-title {
+    font-size: 62px;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 100px;
+}
+
+.jury-judge {
+    display: flex;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+}
+
+[alt="Stone"] {
+    border-radius: 50%;
+}
+
+.judge-title {
+    font-size: 24px;
+}
+
+.judge-title + p {
+    font-size: 16px;
+}
