--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ textarea {
     margin: 0 auto;
 }
 
+/* header */
+
 header {
     position: absolute;
     width: 100%;
@@ -130,6 +132,9 @@ header {
     height: 3px;
 }
 
+/* main 
+ba-hero */
+
 
 .ba-hero {
     background-image: url(../img/head.jpg);
@@ -176,6 +181,8 @@ header {
     background-color: #fff;
     color: #000;
 }
+
+/* about-us */
 
 .about-us {
     padding-bottom: 60px;
@@ -298,7 +305,7 @@ h4 + p {
     transition: 0.5s ease-in;
 }
 
-
+/* ba-battle */
 
 .ba-battle {
 padding: 0;
@@ -401,6 +408,8 @@ h6 + p {
     text-transform: uppercase;
 }
 
+/* sponsor */
+
 .sponsor {
     padding-top: 27px;
     padding-bottom: 150px;
@@ -428,10 +437,13 @@ h6 + p {
     opacity: 1;
 }
 
+/* jury 2017 */
+
 .jury {
     padding-top: 100px;
     background-color: #ffe9eb;
     color: #444444;
+    padding-bottom: 105px;
 }
 
 .jury-title {
@@ -457,4 +469,203 @@ h6 + p {
 
 .judge-title + p {
     font-size: 16px;
+}
+
+/* contact us */
+
+input, textarea {
+    outline: none;
+}
+
+.contact {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    color: #444444;
+}
+
+.contact-title {
+    font-size: 64px;
+    text-align: center;
+    margin: 0;
+}
+
+.contact-title + p {
+    font-size: 22px;
+    width: 700px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 70px;
+    padding-bottom: 80px;
+}
+
+.contact-form {
+    width: 635px;
+    margin: 0 auto;
+ 
+    
+}
+
+.inp + .inp {
+    margin-left: 30px;
+}
+
+.contact .inp, textarea {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    border-bottom: 6px solid #444444;
+}
+
+.inp {
+    width: 300px;
+    height: 40px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.inp:hover,
+.inp:focus {
+    border-bottom: 1px solid #444444;
+    transition: 0.2s ease-in;
+}
+
+textarea {
+    display: flex;
+    
+    width: 635px;
+    height: 40px;
+    padding-top: 130px;
+      
+}
+
+textarea:hover,
+textarea:focus {
+    border-bottom: 1px solid #444444;
+    transition: 0.2s ease-in;
+}
+
+.contact-submit {
+    margin-left: 486px;
+    margin-top: 35px;
+    background-color: #444444;
+    color: #fff;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    border: 1px solid transparent;
+    
+}
+
+.contact-submit:hover,
+.contact-submit:focus {
+    color: #444444;
+    background-color: lightgrey;
+    border: 1px solid #444444;
+    transition: 0.5s ease-in;
+}
+
+/* footer */
+
+.ba-footer {
+    padding-top: 75px;
+    padding-bottom: 60px;
+    background-color: #eeeeee;
+    color: #444444;
+}
+
+.footer-title {
+    font-size: 36px;
+    text-align: center;
+    margin: 0;
+}
+
+.footer-title + p {
+    font-size: 16px;
+    text-align: center;
+}
+
+.footer-form {
+    display: flex;
+    margin: auto;
+    -webkit-align-items: center;
+            align-items: center;
+    text-align: center;
+    width: 530px;
+    -webkit-justify-content: space-between;
+            justify-content: space-between;
+    padding-top: 30px;
+    
+}
+
+.footer-form [type="email"] {
+    background-color: #fff;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    height: 60px;
+    width: 390px;
+    border-radius: 12px;
+    padding-left: 10px;
+    border: 1px solid transparent;
+}
+
+.footer-form [type="email"]:hover,
+.footer-form [type="email"]:focus {
+    border: 1px solid #444444;
+}
+
+[value="Subscribe"] {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: #c60ebe;
+    border-radius: 12px;
+    height: 60px;
+    width: 138px;
+    border: 1px solid transparent;
+    margin-left: 10px;
+}
+
+[value="Subscribe"]:hover,
+[value="Subscribe"]:focus {
+    border: 1px solid #c60ebe;
+    background-color: #FFF;
+    color: #000;
+    transition: 0.5s ease-in;
+}
+
+.network {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+    padding-top: 80px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.network .img-wrapper {
+    display: flex;
+    justify-content: space-around;
+}
+
+.network a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    background-color: #e1e1e1;
+    margin-left: 15px;
+}
+
+.network a:hover,
+.network a:focus {
+    background-color: #4a4747;
+    transition: 0.35s ease-in;
 }
